# kconfig

./: .gitignore  CMakeLists.txt  Readme.md
project/app/: main.c
release/: .config  log.txt  my_config.h
scripts/kconfig/: Kconfig  kconfig.py
